
dist_check_SCRIPTS = \
	test_examples_basic.sh \
	test_adf_floppy.sh \
	test_adfinfo.sh \
	test_unadf.sh

dist_check_DATA = \
	config.sh \
	common.sh \
	results/adf_floppy_test_1 \
	results/adf_floppy_test_2 \
	results/adf_floppy_test_3 \
	results/adf_floppy_test_4 \
	results/adfinfo_test_1 \
	results/adfinfo_test_2 \
	results/adfinfo_test_3 \
	results/adfinfo_test_4 \
	results/adfinfo_test_5 \
	results/unadf_no_args \
	results/unadf_help \
	results/unadf_invalid_args_1 \
	results/unadf_invalid_args_2 \
	results/unadf_list_root_directory_option \
	results/unadf_list_entire_disk_option \
	results/unadf_show_logical_block_pointer_option \
	results/unadf_extract_to_dir \
	results/unadf_extract_to_dir_with_specific_files \
	results/unadf_extract_to_pipe_option \
	results/unadf_mangle_win32_filenames_option \
	results/unadf_confirm_the_mangling \
	results_msys/adf_floppy_test_1 \
	results_msys/adf_floppy_test_2 \
	results_msys/adf_floppy_test_3 \
	results_msys/adf_floppy_test_4 \
	results_msys/adfinfo_test_1 \
	results_msys/adfinfo_test_2 \
	results_msys/adfinfo_test_3 \
	results_msys/adfinfo_test_4 \
	results_msys/adfinfo_test_5 \
	results_msys/unadf_no_args \
	results_msys/unadf_help \
	results_msys/unadf_invalid_args_1 \
	results_msys/unadf_invalid_args_2 \
	results_msys/unadf_list_root_directory_option \
	results_msys/unadf_list_entire_disk_option \
	results_msys/unadf_show_logical_block_pointer_option \
	results_msys/unadf_extract_to_dir \
	results_msys/unadf_extract_to_dir_with_specific_files \
	results_msys/unadf_extract_to_pipe_option \
	results_msys/unadf_mangle_win32_filenames_option \
	results_msys/unadf_confirm_the_mangling

check_SCRIPTS = $(dist_check_SCRIPTS)
check_DATA = $(dist_check_DATA)

TESTS = $(dist_check_SCRIPTS)
