dist_check_DATA = \
	./adfbitmap/1_show_invalid_bitmap \
	./adfbitmap/1_show_invalid_bitmap_msys \
	./adfbitmap/2_rebuild_bitmap \
	./adfbitmap/2_rebuild_bitmap_msys \
	./adfbitmap/3_show_valid_bitmap \
	./adfbitmap/3_show_valid_bitmap_msys \
	./adf_floppy/floppy_dev_create \
	./adf_floppy/floppy_dev_create_msys \
	./adf_floppy/floppy_dev_info \
	./adf_floppy/floppy_dev_info_msys \
	./adf_floppy/floppy_ffs_dev_format \
	./adf_floppy/floppy_ffs_dev_format_msys \
	./adf_floppy/floppy_ffs_dev_info \
	./adf_floppy/floppy_ffs_dev_info_msys \
	./adf_floppy/floppy_ffs_vol_info \
	./adf_floppy/floppy_ffs_vol_info_msys \
	./adf_floppy/floppy_ofs_dev_format \
	./adf_floppy/floppy_ofs_dev_format_msys \
	./adf_floppy/floppy_ofs_dev_info \
	./adf_floppy/floppy_ofs_dev_info_msys \
	./adf_floppy/floppy_ofs_vol_info \
	./adf_floppy/floppy_ofs_vol_info_msys \
	./adfinfo/adfinfo_test_device \
	./adfinfo/adfinfo_test_device_msys \
	./adfinfo/adfinfo_test_dir_c \
	./adfinfo/adfinfo_test_dir_c_msys \
	./adfinfo/adfinfo_test_dir_l \
	./adfinfo/adfinfo_test_dir_l_msys \
	./adfinfo/adfinfo_test_file \
	./adfinfo/adfinfo_test_file_msys \
	./adfinfo/adfinfo_test_volume \
	./adfinfo/adfinfo_test_volume_msys \
	./adfinfo_hd/adfinfo_hd_test_device \
	./adfinfo_hd/adfinfo_hd_test_device_msys \
	./adfinfo_hd/adfinfo_hd_test_dir_vol0 \
	./adfinfo_hd/adfinfo_hd_test_dir_vol0_msys \
	./adfinfo_hd/adfinfo_hd_test_dir_vol1 \
	./adfinfo_hd/adfinfo_hd_test_dir_vol1_msys \
	./adfinfo_hd/adfinfo_hd_test_dir_vol2 \
	./adfinfo_hd/adfinfo_hd_test_dir_vol2_msys \
	./adfinfo_hd/adfinfo_hd_test_dir_vol3 \
	./adfinfo_hd/adfinfo_hd_test_dir_vol3_msys \
	./adfinfo_hd/adfinfo_hd_test_dir_vol4 \
	./adfinfo_hd/adfinfo_hd_test_dir_vol4_msys \
	./adfinfo_hd/adfinfo_hd_test_dir_vol5 \
	./adfinfo_hd/adfinfo_hd_test_dir_vol5_msys \
	./adfinfo_hd/adfinfo_hd_test_file_vol0 \
	./adfinfo_hd/adfinfo_hd_test_file_vol0_msys \
	./adfinfo_hd/adfinfo_hd_test_file_vol1 \
	./adfinfo_hd/adfinfo_hd_test_file_vol1_msys \
	./adfinfo_hd/adfinfo_hd_test_file_vol2 \
	./adfinfo_hd/adfinfo_hd_test_file_vol2_msys \
	./adfinfo_hd/adfinfo_hd_test_file_vol3 \
	./adfinfo_hd/adfinfo_hd_test_file_vol3_msys \
	./adfinfo_hd/adfinfo_hd_test_file_vol4 \
	./adfinfo_hd/adfinfo_hd_test_file_vol4_msys \
	./adfinfo_hd/adfinfo_hd_test_file_vol5 \
	./adfinfo_hd/adfinfo_hd_test_file_vol5_msys \
	./adfinfo_hd/adfinfo_hd_test_volume_0 \
	./adfinfo_hd/adfinfo_hd_test_volume_0_msys \
	./adfinfo_hd/adfinfo_hd_test_volume_1 \
	./adfinfo_hd/adfinfo_hd_test_volume_1_msys \
	./adfinfo_hd/adfinfo_hd_test_volume_2 \
	./adfinfo_hd/adfinfo_hd_test_volume_2_msys \
	./adfinfo_hd/adfinfo_hd_test_volume_3 \
	./adfinfo_hd/adfinfo_hd_test_volume_3_msys \
	./adfinfo_hd/adfinfo_hd_test_volume_4 \
	./adfinfo_hd/adfinfo_hd_test_volume_4_msys \
	./adfinfo_hd/adfinfo_hd_test_volume_5 \
	./adfinfo_hd/adfinfo_hd_test_volume_5_msys \
	./adfsalvage/01_show_deleted_entries \
	./adfsalvage/01_show_deleted_entries_msys \
	./adfsalvage/02_show_bitmap \
	./adfsalvage/02_show_bitmap_msys \
	./adfsalvage/03_rebuild_bitmap \
	./adfsalvage/03_rebuild_bitmap_msys \
	./adfsalvage/04_show_bitmap \
	./adfsalvage/04_show_bitmap_msys \
	./adfsalvage/05_salvage_deleted_file \
	./adfsalvage/05_salvage_deleted_file_msys \
	./adfsalvage/06_show_deleted_entries \
	./adfsalvage/06_show_deleted_entries_msys \
	./adfsalvage/07_salvaged_file_info \
	./adfsalvage/07_salvaged_file_info_msys \
	./adfsalvage/08_show_bitmap \
	./adfsalvage/08_show_bitmap_msys \
	./unadf/extract_files_to_dir_1_extract \
	./unadf/extract_files_to_dir_1_extract_msys \
	./unadf/extract_files_to_dir_2_check_permissions_csh \
	./unadf/extract_files_to_dir_2_check_permissions_csh_msys \
	./unadf/extract_files_to_dir_2_check_permissions_startup_sequence \
	./unadf/extract_files_to_dir_2_check_permissions_startup_sequence_msys \
	./unadf/extract_files_to_dir_2_check_permissions_system_configuration \
	./unadf/extract_files_to_dir_2_check_permissions_system_configuration_msys \
	./unadf/extract_to_dir_1_extract \
	./unadf/extract_to_dir_1_extract_msys \
	./unadf/extract_to_dir_2_check_permissions_CSH \
	./unadf/extract_to_dir_2_check_permissions_CSH_msys \
	./unadf/extract_to_dir_2_check_permissions_LZX \
	./unadf/extract_to_dir_2_check_permissions_LZX_msys \
	./unadf/extract_to_pipe \
	./unadf/extract_to_pipe_msys \
	./unadf_hdd/list_entire_volume \
	./unadf_hdd/list_entire_volume_msys \
	./unadf/help \
	./unadf/help_msys \
	./unadf/invalid_arg_for_d \
	./unadf/invalid_arg_for_d_msys \
	./unadf/invalid_arg_for_v \
	./unadf/invalid_arg_for_v_msys \
	./unadf/list_entire_disk \
	./unadf/list_entire_disk_msys \
	./unadf/list_root \
	./unadf/list_root_msys \
	./unadf/no_args \
	./unadf/no_args_msys \
	./unadf/show_logical_block_pointer \
	./unadf/show_logical_block_pointer_msys \
	./unadf_win32/mangle_win32_filenames \
	./unadf_win32/mangle_win32_filenames_msys \
	./unadf_win32/mangle_win32_filenames_only_on_extraction \
	./unadf_win32/mangle_win32_filenames_only_on_extraction_msys 